--- a/50-cloud-init.yaml
+++ b/50-cloud-init.yaml
@@ -4,6 +4,7 @@
 # /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg with the following:
 # network: {config: disabled}
 network:
+    renderer: NetworkManager
     ethernets:
         eth0:
             dhcp4: true
